# MasterSwordRebirth-Xash3D

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  createall.sh
.github/workflows/: pr.yml  release.yml
bins/dependencies/: README.md
cmake/: LinuxToolchain.cmake
docs/: BUG_AUDIT.md
lib/include/vgui/: VGUI_Panel.h
lib/zlib/: zlib.lib
src/common/: entity_state.h  usercmd.h
src/game/client/: CMakeLists.txt  SteamClientHelper.cpp  SteamClientHelper.h  cdll_int.cpp  clientlibrary.cpp  entity.cpp  hud_spectator.cpp  inputw32.cpp  parsemsg.h  richpresence.cpp  view.cpp
src/game/client/ms/: clenv.h  clglobal.h  clplayer.cpp  hudmisc.cpp  hudscript.cpp  hudscript.h
src/game/client/render/: clrender.cpp  clrender.h  clrenderent.cpp  studiomodelrenderer.cpp
src/game/client/ui/: vgui_global.cpp  vgui_global.h  vgui_listbox.cpp  vgui_listbox.h  vgui_schememanager.cpp  vgui_scorepanel.cpp  vgui_scrollbar2.cpp  vgui_scrollbar2.h  vgui_slider2.cpp  vgui_slider2.h  vgui_teamfortressviewport.cpp  vgui_teamfortressviewport.h
src/game/client/ui/ms/: vgui_choosecharacter.cpp  vgui_container.cpp  vgui_container.h  vgui_containerlist.cpp  vgui_containerlist.h  vgui_eventconsole.h  vgui_health.h  vgui_healthretro.h  vgui_hud.cpp  vgui_hud.h  vgui_infowin.h  vgui_menu_interact.h  vgui_menubase.cpp  vgui_menubase.h  vgui_moveitempanel.cpp  vgui_moveitempanel.h  vgui_mscontrols.cpp  vgui_mscontrols.h  vgui_options.cpp  vgui_startsaytext.h  vgui_stats.cpp  vgui_storage.cpp  vgui_storage.h  vgui_storebuy.cpp  vgui_storemainwin.cpp  vgui_storemainwin.h  vgui_storesell.cpp  vgui_storesell.h
src/game/server/: CMakeLists.txt  client.cpp  enginecallback.h  entities.cpp  entities.h  magic.cpp  msmapents.cpp  store.cpp  store.h  svglobals.cpp  svglobals.h
src/game/server/effects/: mseffects.cpp
src/game/server/fn/: CreateCharacterReq.cpp  CreateCharacterReq.h  DeleteCharacterReq.cpp  DeleteCharacterReq.h  FNSharedDefs.cpp  FNSharedDefs.h  HTTPRequest.cpp  HTTPRequest.h  LoadCharacterReq.cpp  LoadCharacterReq.h  RequestManager.cpp  RequestManager.h  UpdateCharacterReq.cpp  UpdateCharacterReq.h  ValidateConReq.cpp  ValidateConReq.h  ValidateMapReq.cpp  ValidateMapReq.h  ValidateScriptsReq.cpp  ValidateScriptsReq.h
src/game/server/gamerules/: multiplay_gamerules.cpp
src/game/server/hl/: cbase.h  soundent.cpp  soundent.h
src/game/server/monsters/: monsteranimation.cpp  monsteranimation.h  msmonster.h  msmonsterserver.cpp  npcglobal.cpp  npcscript.cpp
src/game/server/player/: player.cpp  player.h  playershared.cpp
src/game/shared/: genitemlist.cpp
src/game/shared/movement/: pm_shared.cpp
src/game/shared/ms/: global.cpp  global.h  globalmem.cpp  groupfile.cpp  groupfile.h  iscript.h  logger.h  mscharacter.cpp  mscharacter.h  msdebug.h  msfileio.cpp  msmonstershared.cpp  script.cpp  script.h  scriptcmds.cpp  scriptedeffects.cpp  scriptedeffects.h  scriptmgr.cpp  scriptmgr.h  sharedutil.cpp  sharedutil.h  stackstring.cpp  stackstring.h  storeshared.h
src/game/shared/stats/: races.cpp  races.h  stats.cpp  stats.h
src/game/shared/syntax/: syntax.cpp
src/game/shared/weapons/: genericitem.cpp  genericitem.h  giarmor.cpp  giattack.cpp  gipack.cpp  weapons.h
src/public/: archtypes.h
src/public/engine/: cdll_int.h  edict.h  eiface.h  progdefs.h
utils/scriptpack/: packer.cpp  scriptpack.cpp
